2004-08-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): reinstate
	renameinput.

2004-08-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/lookup.cc (round_filled_box): remove warnings about blot
	diameter.

	* scm/paper.scm (paper-set-staff-size): make linethickness more
	easily tunable.

	* lily/parser.yy (new_lyrics): \addlyrics -> \oldaddlyrics,
	\newlyrics -> \addlyrics

	* lily/text-spanner.cc (print): use it.

	* lily/dynamic-text-spanner.cc (print): use it.

	* lily/grob.cc (robust_relative_extent): new function.

	* scripts/lilypond-book.py (main): add -f tex as default process.

	* lily/text-spanner.cc (print): only take linear_combination of
	nonempty interval.
	

2004-08-02  Pedro Kroger  <kroeger@pedrokroeger.net>

	* scm/page-layout.scm (default-page-make-stencil): If leftmargin
	isn't specified by the user in \bookpaper center the music in the
	page.

2004-08-02  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Fix some problems after the renaming of my-lily -> lily

2004-08-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/lily-parser.cc (parse_string): don't overwrite keytable_.

	* lily/slur-quanting.cc (enumerate_attachments): apply center on
	stem-X in more cases. 

	* lily/stem.cc (dim_callback): solve todo.

2004-08-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/test/README: new file.

	* lily/lily-parser.cc: rename my-lily* files.

	* lily/my-lily-parser.cc (LY_DEFINE): plug memory leak: unprotect
	parser.

	* lily/include/my-lily-lexer.hh (class Lily_lexer): smobify lexer.

	* lily/include/my-lily-parser.hh: rename My_lily -> Lily

	* make/mutopia-targets.make (local-WWW): don't make ps.gz
	examples. They take a huge amount of space.

	* Documentation/user/GNUmakefile: fix symlinks.

	* VERSION: 2.3.10 released.
	
	* input/test/lyrics-skip-notes.ly: remove

	* input/test/stem-cross-staff.ly (noFlag): fold into manual

	* input/test/{spacing-2,staff-space,tablature,textscript}.ly:
	remove.
